# srtgeotag

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/srtgeotag/: __init__.py  cli.py  exif.py  extractor.py  srt.py
tests/: test_cli.py  test_exif.py  test_extractor.py  test_srt.py
