[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "srtgeotag"
version = "0.2.0"
description = "Extract geotagged still frames from DJI videos and their SRT telemetry"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AutoWaypoints.com" }]
keywords = ["dji", "drone", "srt", "geotag", "exif", "ffmpeg", "telemetry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
]
dependencies = ["Pillow>=9.2"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
srtgeotag = "srtgeotag.cli:main"

[project.urls]
Homepage = "https://github.com/GrishTad/srtgeotag"
Repository = "https://github.com/GrishTad/srtgeotag.git"
Issues = "https://github.com/GrishTad/srtgeotag/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/srtgeotag"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
